# auditx

./: .gitignore  README.md  auditx  pyproject.toml  requirements-dev.txt  requirements-zabbix.txt  requirements.txt
config/: auditx.yaml.default
src/auditx/: cli.py  scaffold.py
src/auditx/checks/: __init__.py
src/auditx/checks/linux/: __init__.py  hostname_check.py
src/auditx/core/: base.py  config.py  discovery.py  facts.py  models.py  provider_loader.py  reporting.py  runner.py
src/auditx/providers/: __init__.py  linux_base.py  mysql_base.py  zabbix_base.py
src/auditx/templates/: check.py.tpl  provider.py.tpl  test_check.py.tpl
tests/: test_cli_color.py  test_cli_docs.py  test_cli_fact_summary.py  test_cli_facts.py  test_cli_run.py
tests/checks/: test_hostname_check.py  test_server_version_check.py  test_server_version_server_check.py  test_slow_queries_check.py  test_unused_templates_check.py
tests/checks/zabbix/: test_cache_utilization_check.py  test_config_duplicate_parameter_check.py  test_default_admin_account_check.py  test_default_admin_password_check.py  test_host_encryption_check.py  test_host_proxy_coverage_check.py  test_host_unavailability_check.py  test_item_never_supported_check.py  test_item_refresh_check.py  test_item_unsupported_check.py  test_lld_refresh_check.py  test_poller_utilization_check.py  test_template_version_check.py  test_trigger_unknown_check.py
tests/core/: test_config.py  test_facts.py  test_reporting.py  test_runner.py
tests/providers/: test_linux_provider.py  test_zabbix_provider.py
(+30 files in other folders)
